# Chronoscope

./: .gitignore  AGENTS.md  BUILD_REPORT.md  CHANGELOG.md  LICENSE  Makefile  README.md  SMOKE_TEST.md  TEST_COVERAGE.md  docker-compose.test.yml
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml
docs/: API.md  ARCHITECTURE.md  AUDIT_VALIDATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  QUICKSTART.md  SDK_INTEGRATION.md  SECURITY.md
docs/audits/: QUALITY_AUDIT_GO.md  QUALITY_AUDIT_INFRA.md  QUALITY_AUDIT_RUST.md  QUALITY_AUDIT_SWIFT.md  SECURITY_AUDIT_GO.md  SECURITY_AUDIT_INFRA.md  SECURITY_AUDIT_RUST.md  SECURITY_AUDIT_SWIFT.md
migrations/: 001_initial_schema.sql  002_audit_logs.sql
pkg/middleware/: auth_test.go  cors_test.go  go.mod  go.sum
protocols/api-contracts/: ingestion.yaml
protocols/capture-schema/: session.proto
scripts/: bump-version.sh  release.sh
services/analytics/: .env.example  Dockerfile  README.md  go.mod  go.sum
services/ingestion/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
services/landing/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
services/privacy-engine/: Cargo.toml  README.md
services/processor/: .env.example  Cargo.toml  Dockerfile  README.md
services/processor/src/: config.rs  config_test.rs  db.rs  deduplicator.rs  downloader.rs  encoder.rs  indexer.rs  lib.rs  main.rs  queue.rs  s3_test.rs  sync.rs  uploader.rs
services/processor/tests/: integration_tests.rs  mock_tests.rs
services/web/: .env.example  .eslintrc.cjs  README.md  (+4 more)
(+73 files in other folders)
