[package]
name = "chronoscope-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ffmpeg-next = "6.1"
image = "0.24"
img_hash = "3.2"
aws-sdk-s3 = "1.15"
aws-config = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.9"

[dev-dependencies]
tokio-test = "0.4"
